[project]
name = "apax"
version = "0.7.0"
description = "Atomistic Learned Potential Package in JAX"
readme = "README.md"
requires-python = ">=3.10"
documentation = "https://apax.readthedocs.io/en/latest/"
repository = "https://github.com/apax-hub/apax"
authors = [
    { name = "Moritz René Schäfer", email = "schaefer@theochem.uni-stuttgart.de"},
    { name = "Nico Segreto", email= "segreto@theochem.uni-stuttgart.de"}]
keywords=["machine-learning", "interatomic potentials", "molecular-dynamics"]
license = "MIT"

dependencies = [
    "ase>=3.23.0",
    "clu>=0.0.12",
    "e3x>=1.0.2",
    "einops>=0.8.0",
    "flax>=0.10.1",
    "jax>=0.4.35",
    "lazy-loader>=0.4",
    "matscipy>=1.1.1",
    "numpy>=1.23",
    "optax>=0.2.3",
    "orbax-checkpoint>=0.9.0",
    "pydantic>=2.9.2",
    "typer>=0.13.0",
    "uncertainty-toolbox>=0.1.1",
    "znh5md>=0.3.6",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.6.4",
    "matplotlib>=3.9.2",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.3",
]
docs = [
    "furo>=2024.8.6",
    "ipykernel>=6.29.5",
    "myst-parser>=4.0.0",
    "nbsphinx>=0.9.5",
    "nbsphinx-link>=1.3.1",
    "pandoc>=2.4",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
]
mlflow = [
    "mlflow>=2.17.2",
]



[build-system]
# requires = ["scikit"]
# build-backend = "scikit-core.build"
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
