[project]
name = "apax"
version = "0.9.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.24.0",
    "clu>=0.0.12",
    "e3x>=1.0.2",
    "einops>=0.8.0",
    "flax>=0.10.2",
    "jax>=0.4.38",
    "lazy-loader>=0.4",
    "numpy>=1.23",
    "optax>=0.2.4",
    "orbax-checkpoint>=0.11.0",
    "pydantic>=2.10.5",
    "tensorflow>=2.12.0",
    "typer>=0.13.0",
    "uncertainty-toolbox>=0.1.1",
    "vesin>=0.3.0",
    "znh5md>=0.4.2",
]


[project.optional-dependencies]
zntrack = []
mlflow = [
    "mlflow>=2.19.0",
]
ipsuite = [
    "ipsuite>=0.2.3",
]

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "matplotlib>=3.10.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
lint = [
    "ruff>=0.9.1",
]


[project.scripts]
apax = 'apax.cli.apax_app:app'


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "C", "I", "E"]
extend-ignore = [
    "E501", "E731", "E741", "E402", "F841", "F811", "C901", "E203", "E402"
]

[tool.coverage.run]
branch = true
source = ["apax"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::FutureWarning:jax.*scatter",]
markers = [
    "slow: mark a test as slow and should only run explicitly"
]
